# RefactorPokemon

./: .gitignore  README.md
Pokemon/: CMakeLists.txt  CMakeSettings.json
Pokemon/Client/: CMakeLists.txt
Pokemon/Common/: CMakeLists.txt
Pokemon/Core/: CMakeLists.txt
Pokemon/Server/: CMakeLists.txt
Pokemon/UI/: CMakeLists.txt
oldPokemon/: Pokemon.sln  Pokemon.vcxproj  Pokemon.vcxproj.filters  animation.h  atlas.h  bug_and_problem_list  bullet.h  bullet_attribute.h  collision_line.h  fire.h  flame_jet.h  fly_leaf.h  main.cpp  music_fun.h  mysql_fun.h  picture.h  pointf.h  pokeman_charmander.h  pokemon.h  pokemon_attribute.h  pokemon_bulbasaur.h  pokemon_player.h  pokemon_squirtle.h  pokemon_type.h  scene.h  scene_exit.h  scene_game.h  scene_knapsack.h  scene_login_registration.h  scene_manager.h  scene_menu.h  scene_pokemon.h  scene_progress_bar.h  scene_set.h  timer.h  util.h  water_gun.h
oldPokemon/Pokemon/x64/Debug/: Pokemon.exe.recipe  vc143.idb
oldPokemon/Pokemon/x64/Debug/Pokemon.tlog/: Pokemon.lastbuildstate
